--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="الموقع الشخصي للحبيب علاوي - شاعر وفنان من واسط">
-    <title>علي | الحبيب علاوي</title>
+    <meta name="description" content=" - شاعر وفنان من واسط">
+    <title>علي | velvet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
